syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeyManagerGrpcService {
  rpc cadastrar(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

enum TipoChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_POUPANCA = 1;
  CONTA_CORRENTE = 2;
}

message RegistraChavePixRequest {
  string idCliente = 1;
  string chave = 2;
  TipoChave tipo = 3;
  TipoConta tipoConta = 4;
}

message RegistraChavePixResponse {
  string idCliente = 1;
  string idPix = 2;
}
